Botón de salir de modal.

--- a/PL/Views/Autor/GetAll.cshtml
+++ b/PL/Views/Autor/GetAll.cshtml
@@ -207,9 +207,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-success" id="btnGuardarAutor" onclick="BtnGuardarAutor()">Guardar</button>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" id="btnGuardarAutor" onclick="BtnGuardarAutor()">Guardar</button>
+                        <button type="button" class="btn btn-danger bi bi-box-arrow-left" data-bs-dismiss="modal"> Salir</button>
                 </div>
             </div>
         </div>
